more fixes to media browser
