# api/src/routes/adminRoute.ts
@@ -5,5 +5,6 @@ const router = express.Router({mergeParams: true});
 
 router.post('/sync', controller.sync);
 router.post('/channels', controller.channels);
+router.post('/thumbnails', controller.thumbnails);
 
 export default router;
