# api/src/routes/fileRoute.ts
@@ -4,6 +4,7 @@ import * as controller from '../controllers/fileController';
 const router = express.Router({mergeParams: true});
 
 router.get('/content/:id', controller.content);
+router.get('/thumbnail/:id', controller.thumbnail);
 router.post('/get', controller.get);
 router.get('/list', controller.list);
 router.post('/list', controller.list);
